# trb_tax_pro

./: .gitignore  LICENSE  MANIFEST.in  README.md  audit_tests.py  decrypt_attempt.py  decrypt_brute.py  decrypt_exhaustive.py  decrypt_final.py  decrypt_success.py  multi_year_audit.py  pyproject.toml  test_suite.py  ui.py
archives/: session_2026-04-29.md
docs/: user_guide.md
taxcalcindia-main/: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NAMING.md  README.md  SECURITY.md  example.ipynb  pyproject.toml
taxcalcindia-main/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
taxcalcindia-main/.github/ISSUE_TEMPLATE/: feature_request.md
taxcalcindia-main/.github/workflows/: release.yaml
taxcalcindia-main/docs/source/: conf.py  index.rst  installation.rst  usage.rst
taxcalcindia-main/docs/source/api/: calculator.rst  exceptions.rst  index.rst  models.rst  slabs.rst
taxcalcindia-main/taxcalcindia/: __init__.py  calculator.py  exceptions.py  models.py  slabs.py
taxcalcindia-main/tests/: test_taxcalcindia.py
tests/: test_ais_engine.py
trb_tax_pro/: README.md
trb_tax_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trb_tax_pro/config/: loader.py  surcharge_matrix.json
trb_tax_pro/engine/: __init__.py  base.py  dispatcher.py  fy2020_21.py  fy2021_22.py  fy2022_23.py  fy2023_24.py  fy2024_25.py  fy2025_26.py  fy2026_27.py  interest.py  penalties.py
trb_tax_pro/models/: base.py  capital_gains.py  deductions.py  salary.py  tax_credit.py
trb_tax_pro/parsers/: ais_parser.py
trb_tax_pro/utils/: ais_importer.py  marginal_relief.py  rebate.py
trb_tax_pro/validators/: compliance.py  presumptive.py
