[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxcalcindia"
version = "0.1.4"
description = "A package to calculate income tax for Indian taxpayers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Arumugam Maharaja", email = "raja1998civil@gmail.com" }
]
dependencies = []
keywords = ["tax", "india tax", "income tax", "tax calculation", "itr", "tax assistance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "Programming Language :: Python :: 3",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]
[project.urls]
Homepage = "https://github.com/amrajacivil/taxcalcindia"
Documentation = "https://taxcalcindia.readthedocs.io/en/latest/"
Developer = "https://amraja.in/"